--- a/package.json
+++ b/package.json
@@ -1,21 +1,17 @@
-
 {
   "name": "invoice-generator",
   "version": "1.0.0",
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "next": "14.1.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "puppeteer-core": "^21.3.8",
     "chrome-aws-lambda": "^10.1.0",
-    "tailwindcss": "^3.4.1",
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.31"
+    "next": "latest",
+    "puppeteer-core": "^21.3.8",
+    "react": "latest",
+    "react-dom": "latest",
+    "tailwindcss": "latest"
   }
 }
