--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "next": "latest",
     "puppeteer-core": "^10.1.0",
     "react": "latest",
-    "react-dom": "latest",
-    "tailwindcss": "latest"
+    "react-dom": "latest"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.3"
   }
 }
