--- a/package.json
+++ b/package.json
@@ -1,21 +1,11 @@
 {
-  "name": "invoice-generator",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
   "dependencies": {
-    "chrome-aws-lambda": "^10.1.0",
     "next": "latest",
-    "puppeteer-core": "^10.1.0",
     "react": "latest",
-    "react-dom": "latest"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.3"
+    "react-dom": "latest",
+    "puppeteer": "^21.3.8",
+    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.31"
   }
 }
