--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
+  "name": "invoice-generator",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "puppeteer": "^21.3.8",
-    "tailwindcss": "^3.4.1",
     "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.31"
+    "next": "14.1.4",
+    "postcss": "^8.4.31",
+    "puppeteer": "^21.3.8",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.4.1"
   }
 }
